Added more styling for individual tweets. Also added styling when the tweets are hovered over

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -52,19 +52,30 @@ main.container{
   width: 450px;
   display: flex;
   background-color: white;
-  margin: 0 auto;
-  padding: 140px 2em;
+  border-radius: 10px;
+  margin: 30px auto;
+  padding: 60px 2em 140px;
   align-content: center;
   justify-content: center;
+  flex-direction: column;
 
 }
 
 section.new-tweet{
-  background-color: #eee;
+  background-color: white;
   border-radius: 2%;
-  padding: 0 30px 12px;
   width: 100%;
+  margin: 0 auto;
+}
 
+section.create-tweet{
+  padding: 0 30px 12px;
+  background-color: #eee;
+  border: 1px solid #e8eaed;
+}
+
+section.create-tweet:hover{
+  border: 1px solid black;
 }
 
 section.new-tweet hr{
@@ -72,18 +83,80 @@ section.new-tweet hr{
 }
 section.new-tweet h2{
   margin-bottom: 0;
+  margin-top: 10px;
+  flex: auto;
 }
 form textarea{
   width: 100%;
 }
 span.counter{
-  padding-left: 244px;
-}
+/*  padding-left: 244px;
+*/}
 
 .makeRed {
   color: red;
 }
 
+section.new-tweet article{
+  background-color: white;
+  border: 1px solid #e8eaed;
+  border-radius: 2%;
+  margin-top: 20px;
+}
+
+section.new-tweet article:hover{
+    border: 1px solid black;
+    color: #2c4227;
+}
+
+section.new-tweet article:hover footer i.fas{
+    opacity: 1;
+}
+
+
+article.tweet header{
+  width: 100%;
+  height: 70px;
+  background-color: #eee;
+  border-radius: 3%;
+  display: flex;
+  justify-content: space-between;
+}
+
+header img {
+  margin: 10px;
+  border-radius: 10%;
+}
+
+p.userID {
+  margin: 10px;
+  color: grey;
+}
+
+
+p.tweet-content {
+  padding: 10px 15px;
+}
+
+article.tweet footer{
+  height: 30px;
+  border-radius: 5%;
+  border-top: 1px solid #e8eaed;
+  background-color: white;
+  padding: 5px 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer p.date{
+  margin: 0;
+  font-size: 13px;
+}
+
+footer i.fas{
+  opacity: 0;
+  transition: 1s;
+}
 
 
 
