--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,11 +30,28 @@ body {
   height: 80px;
   background-color: #00a087;
   padding: 0 2em 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 #nav-bar .header{
   color: #e8fdff;
 }
+
+nav#nav-bar button {
+  border-radius: 10%;
+  width: 60px;
+  height: 60px;
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 10px;
+}
+nav#nav-bar button i{
+/*  margin-top: auto;
+*/}
+
 
 img.logo{
   width: 80px;
@@ -44,8 +61,9 @@ img.logo{
 span.header{
   padding-left: 10px;
   font-size: 2em;
-  position: relative;
-  top: -25px;
+  margin-top: 30px;
+  margin-right: 600px;
+  width: 40%;
 }
 
 main.container{
