--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,7 +28,7 @@ body {
  nav#nav-bar{
   width: 100%;
   height: 80px;
-  background-color: #00a087;
+  background-color: #68a2ff;
   padding: 0 2em 0;
   display: flex;
   justify-content: space-between;
@@ -80,7 +80,7 @@ main.container{
   background-color: white;
   border-radius: 10px;
   margin: 30px auto;
-  padding: 60px 2em 140px;
+  padding: 30px 2em 140px;
   align-content: center;
   justify-content: center;
   flex-direction: column;
@@ -112,13 +112,14 @@ section.new-tweet h2{
   margin-bottom: 0;
   margin-top: 10px;
   flex: auto;
+  color: #3a3a3a;
 }
 form textarea{
   width: 100%;
+  overflow: auto;
+  max-height: 200px;
+  resize: none;
 }
-span.counter{
-/*  padding-left: 244px;
-*/}
 
 .makeRed {
   color: red;
@@ -189,6 +190,9 @@ div.icons i.fas{
   transition: 0.5s;
 }
 
+form p {
+  color: #af1d1d;
+}
 
 
 
