Created function called getTime that would change the created at time from miliseconds to time and date

--- a/public/sass/partials/navbar.scss
+++ b/public/sass/partials/navbar.scss
@@ -1,5 +1,5 @@
 //colors
-$color_lemon_grass_approx: #969f90;
+$color_blue: #2E79A3;
 $color_bubbles_approx: #e8fdff;
 $gallery: #efefef;
 $white: white;
@@ -12,7 +12,7 @@ $white: white;
 nav#nav-bar {
   width: 100%;
   height: 80px;
-  background-color: $color_lemon_grass_approx;
+  background-color: $color_blue;
   padding: 0 2em;
   display: flex;
   justify-content: space-between;
