--- a/public/css/partials/navbar.css
+++ b/public/css/partials/navbar.css
@@ -6,7 +6,7 @@
 nav#nav-bar {
   width: 100%;
   height: 80px;
-  background-color: #969f90;
+  background-color: #2E79A3;
   padding: 0 2em;
   display: flex;
   justify-content: space-between;
