--- a/public/sass/partials/newTweet.scss
+++ b/public/sass/partials/newTweet.scss
@@ -30,7 +30,7 @@ section.new-tweet article {
   &:hover {
     border: 1px solid black;
     color: #2c4227;
-    footer i.fas {
+    footer i.fas, button.fas{
       opacity: 1;
     }
   }
@@ -76,7 +76,7 @@ footer p.date {
   font-size: 13px;
 }
 
-div.icons i.fas {
+div.icons i.fas, button.fas{
   opacity: 0;
   font-size: 12px;
   letter-spacing: 5px;
