--- a/public/css/partials/navbar.css
+++ b/public/css/partials/navbar.css
@@ -1,8 +1,3 @@
-@media (min-width: 768px) {
-  span.header {
-    margin-right: 800px !important;
-  }
-}
 nav#nav-bar {
   width: 100%;
   height: 80px;
@@ -28,6 +23,7 @@ nav#nav-bar button:hover {
 
 #nav-bar .header {
   color: #e8fdff;
+  flex: auto;
 }
 
 img.logo {
