--- a/public/css/partials/createTweet.css
+++ b/public/css/partials/createTweet.css
@@ -35,4 +35,18 @@ span.counter {
   margin-left: 510px;
 }
 
+/* Portrait tablet and small desktops */
+@media (max-width: 940px) {
+  span.counter {
+    margin-left: 510px;
+  }
+}
+/* Landscape phone to portrait tablet */
+@media (max-width: 768px) {
+  span.counter {
+    margin-left: 400px;
+  }
+}
+/* Landscape phones and down */
+
 /*# sourceMappingURL=createTweet.css.map */
